(lang dune 2.9)
(name cmsc388x_interpreters)

(source (github cmsc388x/interpreters))
(license MIT)
(authors "Pierce Darragh <pdarragh@umd.edu>")
(maintainers "Pierce Darragh <pdarragh@umd.edu>")
(homepage "https://github.com/cmsc388x/interpreters")
(documentation "https://github.com/cmsc388x/interpreters")
